RabbitMQPrototype/Kubernetes/accountservice-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: s6app-accountservice-service
spec:
  type: ClusterIP
  selector:
    app: s6app-accountservice
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s6app-accountservice-deployment
  labels:
    app: s6app-accountservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: s6app-accountservice
  template:
    metadata:
      labels:
        app: s6app-accountservice
    spec:
      containers:
      - name: accountservice
        image: wesje101/s6-2_personal_project:accountservice
