RabbitMQPrototype/Kubernetes/apigateway-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: s6app-apigateway-service
spec:
  type: ClusterIP
  selector:
    app: s6app-apigateway
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s6app-apigateway-deployment
  labels:
    app: s6app-apigateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: s6app-apigateway
  template:
    metadata:
      labels:
        app: s6app-apigateway
    spec:
      containers:
      - name: apigateway
        image: wesje101/s6-2_personal_project:apigateway
