RabbitMQPrototype/Kubernetes/authservice-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: s6app-authservice-service
spec:
  type: ClusterIP
  selector:
    app: s6app-authservice
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s6app-authservice-deployment
  labels:
    app: s6app-authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: s6app-authservice
  template:
    metadata:
      labels:
        app: s6app-authservice
    spec:
      containers:
      - name: authservice
        image: wesje101/s6-2_personal_project:authservice
        imagePullPolicy: Always
