RabbitMQPrototype/Kubernetes/chatservice-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: s6app-chatservice-service
spec:
  type: ClusterIP
  selector:
    app: s6app-chatservice
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s6app-chatservice-deployment
  labels:
    app: s6app-chatservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: s6app-chatservice
  template:
    metadata:
      labels:
        app: s6app-chatservice
    spec:
      containers:
      - name: chatservice
        image: wesje101/s6-2_personal_project:chatservice
        imagePullPolicy: Always
