RabbitMQPrototype/Kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s6app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: s6app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: s6app-apigateway-service
            port:
              number: 80
